fixing nav spacing for getting started

--- a/css/matthew.css
+++ b/css/matthew.css
@@ -2,12 +2,12 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 
 /* Centering images */
-.center {
+/* .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 20%;
-}
+} */
 
 /* General body styles */
 body {
@@ -15,6 +15,8 @@ body {
     font-size: 28px;
     color: white;
     background-color: #282828;
+    margin:0;
+    padding:0;
 }
 
 /* #title-container {
@@ -56,9 +58,9 @@ h3{
 /***************************************************************************************/
 /*  Image and Welcome Section  */
 .header-wrapper {
-    /* width:100%;
-    height:100%; */
-    width: 100vw;  
+    width:100%;
+    /* height:100%; */
+    /* width: 100vw;   */
     height: 100vh; 
     position: relative;
     overflow: hidden; /* Prevents content from spilling over */
@@ -69,6 +71,7 @@ h3{
 }
 
 .header {
+    overflow: hidden;
     position: relative;
     text-align: center;
     color: white; /* Adjust text color to contrast with the image */
@@ -84,12 +87,13 @@ h3{
     position: absolute;
     top: 0;
     left: 0;
-    /* width:100%;
-    height:100%; */
-    width: 100vw;  
+    width:100%;
+    /* height:100%; */
+    /* width: 100vw;   */
     height: 100vh; 
     object-fit: cover; /* Ensures the image covers the area */
     z-index: -1; /* Places the image behind the text */
+    padding:0;
 }
 
 .header h1 {
@@ -126,9 +130,9 @@ h3{
     position: absolute;
     top: 0;
     left: 0;
-    /* width:100%;
-    height:100%; */
-    width: 100vw;  
+    width:100%;
+    /* height:100%; */
+    /* width: 100vw;   */
     height: 100vh; 
     background: rgba(0, 0, 0, .5); /* Black overlay with 50% opacity */
     z-index: -1;
@@ -158,10 +162,13 @@ h3{
     position: relative;
     position: sticky;
     top: 0;
+    width: 100%;
 }
 
 .nav-bar li {
     float: left;
+    padding:0;
+    margin:0;
 }
 
 .nav-bar li a {
@@ -191,6 +198,8 @@ h3{
     margin: 0;
     margin-left:20%;
     margin-right:20%;
+    margin-bottom:0;
+    padding-bottom:0;
 }
 
 .section-title h2{
